--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,48 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:layout_margin="10dp"
-    >
+    android:minWidth="300dp">
+
     <TextView
-        android:id="@+id/txt_Image_name"
+        android:id="@+id/txt_image_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Image Name"
+        android:layout_height="0dp"
         android:gravity="center"
+        android:text="Image Name"
         android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
         />
+
+    <EditText
+        android:id="@+id/txt_image_desc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:autoText="false"
+        android:gravity="top|left"
+        android:hint="Image description"
+        android:minHeight="100dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img" />
+
     <ImageView
         android:id="@+id/img"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_Image_name"
+        android:layout_below="@+id/txt_image_title"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_image_title" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/img"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/txt_image_desc">
+
         <Button
-            android:id="@+id/btn_full"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:id="@+id/btn_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Full View"
+            android:background="#0A451E"
+            android:text="Save"
             android:textColor="#fff"
-            android:background="@color/colorPrimary"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_image_desc" />
+
         <Button
             android:id="@+id/btn_close"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#F31919"
             android:text="Close"
             android:textColor="#fff"
-            android:background="#000"
-            android:layout_weight="1"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_image_desc" />
     </LinearLayout>
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
