--- a/app/src/main/res/layout/activity_full_view.xml
+++ b/app/src/main/res/layout/activity_full_view.xml
@@ -16,13 +16,13 @@
             android:layout_height="wrap_content">
 
             <TextView
-            android:id="@+id/path_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="No Path Title"
-            android:textSize="20sp"
-            android:padding="10dp"
+                android:id="@+id/path_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="No Path Title"
+                android:textSize="20sp"
+                android:padding="10dp"
             />
 
 
@@ -36,23 +36,23 @@
                 android:adjustViewBounds="true"
                 />
 
-            <TextView
-                android:id="@+id/description"
+            <EditText
+                android:id="@+id/txt_image_desc"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/img_full"
-                android:text="No Description"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:padding="10dp"/>
+                android:gravity="top|left"
+                android:hint="Image description"
+                android:minHeight="100dp"
+                android:textSize="18sp" />
+
 
             <TextView
                 android:id="@+id/temperature"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:layout_below="@id/description"
+                android:layout_below="@id/txt_image_desc"
                 android:text="No Temperature Recorded"
                 android:textSize="18sp"
                 android:textStyle="bold"
