fixed thumbnail problems + started on VistData recyclerview

--- a/app/src/main/res/layout/list_item_visit.xml
+++ b/app/src/main/res/layout/list_item_visit.xml
@@ -7,13 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/image_item"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        android:padding="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/path_title"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="No Path Title"
+        android:textSize="20sp"
+        android:padding="10dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
