--- a/app/src/main/res/layout/list_item_visit.xml
+++ b/app/src/main/res/layout/list_item_visit.xml
@@ -3,14 +3,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/path_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#83009688"
         android:gravity="center"
         android:padding="10dp"
         android:text="No Path Title"
