--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="colorBackground">#00F0FF</color>
+    <color name="colorPrimary">#eb6b6f</color>
+    <color name="colorPrimaryDark">#7c3f58  </color>
+    <color name="colorAccent">#eb6b6f</color>
+    <color name="colorBackground">#fff6d3 </color>
 </resources>
