--- a/app/src/main/res/layout/activity_view_visit.xml
+++ b/app/src/main/res/layout/activity_view_visit.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewImageData">
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-    <TextView
-        android:id="@+id/path_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="No Path Title"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        <RelativeLayout
+            android:id="@+id/form_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/path_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/path_title"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="No Path Date"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/path_title"
-        tools:layout_editor_absoluteX="-50dp" />
+            <TextView
+                android:id="@+id/path_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="No Path Title"
+                android:textSize="20sp"
+                android:padding="10dp"
+            />
 
-    <fragment
-        android:id="@+id/fragment_visit_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@id/path_date"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/path_date" />
+            <TextView
+                android:id="@+id/path_date"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="No Path Date"
+                android:layout_below="@id/path_title"
+                android:textSize="20sp"
+                android:padding="10dp"
+                />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+            <fragment
+                android:id="@+id/fragment_visit_map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_below="@id/path_date"
+                android:scrollbars="vertical" />
+
+        </RelativeLayout>
+    </ScrollView>
+
+</RelativeLayout>
